kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transac-ai-rss-gke
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transac-ai-rss
  template:
    metadata:
      labels:
        app: transac-ai-rss
    spec:
      containers:
        - name: rss-app
          image: us-east1-docker.pkg.dev/transac-ai/rss-repo/transac-ai-rss-gke:1.0.1
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: '256Mi'
              cpu: '50m'
              ephemeral-storage: '256Mi'
            limits:
              memory: '512Mi'
              cpu: '100m'
              ephemeral-storage: '500Mi'
