kubernetes/load-balancer-service.yaml
# Load balancer to access the transac-ai-iss deployment
apiVersion: v1
kind: Service
metadata:
  name: transac-ai-iss-service
spec:
  type: LoadBalancer
  selector:
    app: transac-ai-iss
  ports:
    - port: 80
      targetPort: 4000
