kubernetes/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transac-ai-iss-node-port-service
spec:
  selector:
    app: transac-ai-iss
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
