kubernetes/service.yaml
# Load balancer to access the Transac AI Requests Storage Service
apiVersion: v1
kind: Service
metadata:
  name: transac-ai-rss-service
spec:
  type: LoadBalancer
  selector:
    app: transac-ai-rss
  ports:
    - name: tcp-port
      protocol: TCP
      port: 80
      targetPort: 4000
